src/test/testData/highlighting/functionalElement.conf
filter {
    if "string" in [field] {
        grok {
            match => { "message" => [<error descr="<plugin>, <string>, Logstash token type.BAREWORD, Logstash token type.NUMBER or Logstash token type.[ expected, got '%'">%</error>{TIMESTAMP_ISO8601<error descr="Logstash token type.=> expected, got ':'">:</error>date}] %{GREEDYDATA:trash}: { %{WORD}%{GREEDYDATA:core_message}"}
        }
    } else if [field] == "string" and [field] == 1 {
        drop {}
    } else if [field] =~  {
        drop {}
    }
}
